--- a/thesis/praca.tex
+++ b/thesis/praca.tex
@@ -88,8 +88,8 @@ population in Conway's Game of Life.}
 \thesistype{Praca dyplomowa inżynierska}
 \supervisor{dr inż. Lidia Dutkiewicz}
 \degreeprogramme{Automatyka i Robotyka}
-\date{2017}
-\department{Katedra Automatyki i Inżynierii Biomedycznej}
+\date{2018}
+\department{Katedra Automatyki i Robotyki}
 \faculty{Wydział Elektrotechniki, Automatyki,\protect\\[-1mm] Informatyki i Inżynierii Biomedycznej}
 
 \acknowledgements{Dla mojej gumowej kaczuszki Nataszy}
@@ -116,17 +116,20 @@ population in Conway's Game of Life.}
 \tableofcontents
 \clearpage
 
-\include{rozdzial1}
-\include{rozdzial2}
-
-
+\include{chapter_intro}
+\include{chapter_game_of_life}
+\include{chapter_neural_nets}
+\include{chapter_q_learning}
+\include{chapter_policy_grads}
+\include{chapter_actor_critic}
+\include{chapter_results}
+\include{chapter_conclusions}
 
 % itd.
 % \appendix
 % \include{dodatekA}
 % \include{dodatekB}
 % itd.
-
 \printbibliography
 
 \end{document}
